syntax = "proto3";
package onomy.globalfee.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "onomy/globalfee/v1beta1/genesis.proto";

option go_package = "github.com/onomyprotocol/onomy-rebuild/x/globalfee/types";

// Query defines the gRPC querier service.
service Query {
  rpc Params(QueryParamsRequest)
      returns (QueryParamsResponse) {
    option (google.api.http).get =
        "/onomy/globalfee/v1beta1/params";
  }
}

// QueryMinimumGasPricesRequest is the request type for the
// Query/MinimumGasPrices RPC method.
message QueryParamsRequest {}

// QueryMinimumGasPricesResponse is the response type for the
// Query/MinimumGasPrices RPC method.
message QueryParamsResponse {
        Params params = 1 [(gogoproto.nullable) = false];
}